# fundamentos-algoritmos-web

./: .gitignore  .readthedocs.yaml  mkdocs.yml  mkdocs_original.yml  pyproject.toml
docs/: \  aula_01.md  aula_02.md  aula_03.md  aula_04.md  aulas.md  aulas_sincronas.md  index.md  index_completo.md
docs/Módulo 1/: \  aula_00.md  aula_01.md  aula_02.md  aula_03.md  aula_04.md  aula_05.md  aula_06.md  aula_07.md  aula_08.md  aula_09.md  aula_10.md  aula_11.md  aula_12.md  aula_13.md  aula_14.md  aula_15.md  exercicios_em_aula_01.md  exercicios_para_casa_01.md  orientacoes_professor_aula_01.md
docs/Módulo 1/aula_01/: aula_01_caminhos_computacao.md  aula_01_ola_mundo.md
docs/Módulo 2/: aula_01.md  aula_02.md  aula_03.md  aula_04.md  aula_05.md  aula_06.md  aula_07.md  aula_08.md  aula_09.md  teste.md  teste1.md
docs/Módulo 2/Códigos/: aula_03.md  aula_04.md  aula_05.md  aula_06.md
docs/Módulo 2/Pesquisas/: aula_04.html  aula_04.md  aula_05.html  aula_05.md  aula_06.html  aula_06.md
docs/Revisão do módulo 1/: aula_10.md
docs/codigo/aula_03/: aula_03.py  aula_03_ex2.py  aula_03_ex3.py  aula_03_modulos.py  ordenacao.py  ordenacao_flutuacao.py
docs/codigo/aula_04/: ordenacao.py  ordenacoes.py
docs/codigo/aula_05/: exemplo_01.py  exemplo_02.py  exemplo_03.py  exemplo_04.py  (+2 more)
docs/codigo/aula_08/: main.ipynb  pyproject.toml  testes_microdados_enem.ipynb
docs/codigo/aula_08/.ipynb_checkpoints/: main-checkpoint.ipynb  testes_microdados_enem-checkpoint.ipynb
docs/stylesheets/: extra.css
docs/templates/: botoes.md  cabecalho.md  cabecalho_sem_video.md
(+16 files in other folders)
